--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -19,9 +19,8 @@ BBFILE_PATTERN_rockchip := "^${LAYERDIR}/"
 BBFILE_PRIORITY_rockchip = "9"
 
 # Additional license directories.
-RK_LICENSE_PATH = "${LAYERDIR}/files/custom-licenses"
-RK_BINARY_LICENSE = "${RK_LICENSE_PATH}/LICENSE.rockchip"
-LICENSE_PATH += "${RK_LICENSE_PATH}"
+RK_BINARY_LICENSE = "${LAYERDIR}/files/custom-licenses/LICENSE.rockchip"
+LICENSE_PATH += "${LAYERDIR}/files/custom-licenses"
 
 LAYERDEPENDS_rockchip = "core"
 
