layer: exclude RK_BINARY_LICENSE var, using ${LAYERDIR}, from taskhash
Although this is the shortest way to get rid of spurious rebuilds,
the ${LAYERDIR} should instead not be used like this (recommendation
confirmed by yocto core devs on IRC).

There remains on ${LAYERDIR} reference in layer.conf, in RK_OVERLAY_DIRS.
It looks like this code should instead move into its own .bbclass to be
inherited by just the relevant umage recipes.

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -21,6 +21,8 @@ BBFILE_PRIORITY_rockchip = "9"
 # Additional license directories.
 RK_BINARY_LICENSE = "${LAYERDIR}/files/custom-licenses/LICENSE.rockchip"
 LICENSE_PATH += "${LAYERDIR}/files/custom-licenses"
+# Avoid cache invalidation when $LAYER changes (build in different location)
+BB_HASHBASE_WHITELIST_append = " RK_BINARY_LICENSE"
 
 LAYERDEPENDS_rockchip = "core"
 
